@@ -14,7 +14,7 @@
     experience=40
     level=1
     alignment=neutral
-    advanceto=Elvish Captain,Elvish Hero
+    advanceto=Elvish Captain,Elvish Hero,Non exists
     cost=14
     usage=fighter
     description= _ "Elves are not warlike by nature, but in times of need, their natural grace and agility serve them well, as does their skillful craftsmanship. An elf can grasp the basics of swordsmanship and archery in an uncannily short time, and put them to effective use on the battlefield."
