@@ -8,6 +8,7 @@ Version 1.5.1+svn:
      development, no compatibility layer has been added.
    * Added gui to choose where server binary is
    * Added type-a-head search to file chooser dialog
+   * Fixed timer end warning not to play in opponents turn (bug: #11517)
    * Added recursion preventarion to [kill] fire_event=yes [/kill]
 
 Version 1.5.1:
